{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 31,
  "lineage": "9178c652-37fa-b27d-fc30-79c11d89d320",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myapp-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:960920920983:loadbalancer/myapp-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "myapp-elb-2054176825.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 60,
                "target": "HTTP:3000/",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "myapp-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "myapp-elb",
            "security_groups": [
              "sg-0abef27fdc6f5884b"
            ],
            "source_security_group": "960920920983/myapp-elb",
            "source_security_group_id": "sg-0abef27fdc6f5884b",
            "subnets": [
              "subnet-03d7a6f421dd3325f",
              "subnet-0560c4b6ee74a4228"
            ],
            "tags": {
              "Name": "myapp-elb"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02b3279378bf98e19",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6bd074f512ee0a6",
            "owner_id": "960920920983",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b3279378bf98e19",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099577cee4b147ebe",
            "route_table_id": "rtb-0a6bd074f512ee0a6",
            "subnet_id": "subnet-0560c4b6ee74a4228"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0978f675bb0d076b3",
            "route_table_id": "rtb-0a6bd074f512ee0a6",
            "subnet_id": "subnet-03d7a6f421dd3325f"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:security-group/sg-00fa53d861b182fcc",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fa53d861b182fcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abef27fdc6f5884b"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs",
            "name_prefix": null,
            "owner_id": "960920920983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:security-group/sg-0abef27fdc6f5884b",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abef27fdc6f5884b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-elb",
            "name_prefix": null,
            "owner_id": "960920920983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-04c15084ba42960c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04c15084ba42960c8",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-0d273f44c163bf707",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d273f44c163bf707",
            "map_public_ip_on_launch": false,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-0560c4b6ee74a4228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0560c4b6ee74a4228",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:subnet/subnet-03d7a6f421dd3325f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03d7a6f421dd3325f",
            "map_public_ip_on_launch": true,
            "owner_id": "960920920983",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0a599b7b8290446e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:960920920983:vpc/vpc-0a599b7b8290446e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dae1c6ab3ba0c69d",
            "default_route_table_id": "rtb-0853f86c6817cfc0a",
            "default_security_group_id": "sg-081fa79b015adaabf",
            "dhcp_options_id": "dopt-f20e8b9a",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a599b7b8290446e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0853f86c6817cfc0a",
            "owner_id": "960920920983",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}